<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AjustesActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="32dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/misahorrosen"
            android:textColor="@color/cardview_dark_background"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/efectivo"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/et_efectivo"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/efectivo"
                    android:gravity="center"
                    android:inputType="numberDecimal" />
            </LinearLayout>
            <View
                android:layout_width="80dp"
                android:layout_height="0dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tarjeta"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/et_tarjeta"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/tarjeta"
                    android:gravity="center"
                    android:inputType="numberDecimal" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textStyle="bold"
            android:textColor="@color/cardview_dark_background"
            android:textSize="24dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_sign"
                android:textColor="@color/cardview_dark_background"
                android:textSize="36sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_ahorros_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/cardview_dark_background"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/cardview_dark_background">
        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meta2"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/money_sign"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="62sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/et_meta"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:hint="@string/meta"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:background="@color/white"
            android:textColor="@color/cardview_dark_background"
            android:textSize="30sp"
            android:layout_marginLeft="6dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="24dp">
        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plan"
            android:textColor="@color/cardview_dark_background"
            android:textSize="24sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingresos"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/et_ingreso"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingreso"
                    android:gravity="center"
                    android:inputType="numberDecimal" />
            </LinearLayout>
            <View
                android:layout_width="80dp"
                android:layout_height="0dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/presupuesto"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/et_presupuesto"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/presupuesto"
                    android:gravity="center"
                    android:inputType="numberDecimal" />
            </LinearLayout>
        </LinearLayout>
        <Spinner
            android:id="@+id/spinner_periodicidad"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/cardview_shadow_start_color"
            android:layout_marginTop="8dp"
            android:gravity="center" />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_ajustes_proyeccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Según tus ajustes, alcanzarás\n tu meta en X periodos"
        android:textSize="24dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="18dp">
        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/Guardar" />
        <View
            android:layout_width="40dp"
            android:layout_height="0dp"/>
        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            app:backgroundTint="@android:color/darker_gray" />
    </LinearLayout>
</LinearLayout>